@@ -1,3 +1,8 @@
+2007-05-28  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Fix: src/kahua/server.scm
+	  Context didn't have "x-kahua-remote-addr".
+
 2007-05-25  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Fix: src/kahua-keyserv.scm
